--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -9,12 +9,14 @@
     <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine.js"></script>
     <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine-html.js"></script>
 
-    <!-- include source files here... -->
+    <!-- include spec files here... -->
     <script type="text/javascript" src="spec/SpecHelper.js"></script>
-  <script type="text/javascript" src="spec/NodeSpec.js"></script>
+    <script type="text/javascript" src="spec/NodeSpec.js"></script>
+    <script type="text/javascript" src="spec/NodeBuilderSpec.js"></script>
 
-  <!-- include spec files here... -->
+    <!-- include source files here... -->
   <script type="text/javascript" src="src/Node.js"></script>
+  <script type="text/javascript" src="src/NodeBuilder.js"></script>
 
   <script type="text/javascript">
     (function() {
