--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css">
     <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine.js"></script>
     <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine-html.js"></script>
+    <script type="text/javascript" src="lib/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="lib/jasmine-jquery-1.3.1.js"></script>
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="spec/SpecHelper.js"></script>
@@ -15,7 +17,7 @@
     <script type="text/javascript" src="spec/NodeBuilderSpec.js"></script>
 
     <!-- include source files here... -->
-  <script type="text/javascript" src="src/Node.js"></script>
+  <script type="text/javascript" src="src/jquery.mac-item-selector.js"></script>
   <script type="text/javascript" src="src/NodeBuilder.js"></script>
 
   <script type="text/javascript">
