--- a/example.html
+++ b/example.html
@@ -7,7 +7,7 @@
   <body>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
     <script src="src/jquery.mac-item-selector.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="css/mac-item-selector.css">
+    <link rel="stylesheet" type="text/css" href="css/mac-item-selector.css"></link>
     <link rel="stylesheet" type="text/css" href="css/mac-item-selector-custom.css">
     <style>
       .clear {
