--- a/example.html
+++ b/example.html
@@ -25,6 +25,10 @@
     </style>
     <script>
       $(document).ready(function(){
+        $('#toggleID').click(function(e) {
+          e.preventDefault();
+          $("#container1").macItemSelector("toggle", "t3");
+        });
         $('#getJSON').click(function(e) {
           e.preventDefault();
           $("#output").html($("#container1").macItemSelector("selectedNodesAsJSON"));
@@ -145,6 +149,7 @@
 
   <div class="clear"></div>
   <button id="getJSON">get selected leaf elements</button>
+  <button id="toggleID">toggle task 3</button>
   <div id="output"></div>
   <h3>Customized text and children indicator</h3>
   <div id="container2" class="example"></div>
