--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>TITLE</title>
+    <title>Mac Style Item Selector</title>
   </head>
   <body>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
@@ -18,6 +18,7 @@
       }
 
       #output {
+        font-size: 18px;
         border: 1px solid #000;
         width: 500px;
         display: none;
@@ -158,5 +159,22 @@
 
   <h3>Customized CSS</h3>
   <div id="container3" class="example"></div>
+  <div class="clear"></div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
 </html>
