--- a/example.html
+++ b/example.html
@@ -152,13 +152,16 @@
   <button id="getJSON">get selected leaf elements</button>
   <button id="toggleID">toggle task 3</button>
   <div id="output"></div>
-  <h3>Customized text and children indicator</h3>
+  <h3>Customized checkbox and children indicator</h3>
   <div id="container2" class="example"></div>
 
   <div class="clear"></div>
 
   <h3>Customized CSS</h3>
   <div id="container3" class="example"></div>
+  <div class="clear"></div>
+
+  <div id="container4" class="example"></div>
   <div class="clear"></div>
   <br>
   <br>
